--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,3 +1,53 @@
 .Weather {
-  border: 1px solid #9e9e9e;
+  border: 1px solid #9b9b9b;
+  font-family: Arial, sans-serif;
+  color: #9b9b9b;
+  padding: 16px 16px 0;
+  border-radius: 4px;
+}
+
+.Weather form {
+  margin-bottom: 20px;
+}
+.Weather h1 {
+  font-size: 24px;
+  font-weight: 100;
+  line-height: 29px;
+  margin: 20px 0 0 0;
+}
+
+.Weather ul {
+  margin: 0;
+  padding: 0;
+}
+
+.Weather li {
+  font-size: 16px;
+  font-weight: 100;
+  line-height: 19px;
+  list-style: none;
+}
+
+.Weather img {
+  display: inline-block;
+  height: 64px;
+  margin-right: 5px;
+  position: relative;
+  top: -15px;
+}
+
+.Weather .temperature {
+  font-weight: 400;
+  color: rgb(33, 33, 33);
+  font-size: 64px;
+}
+
+.Weather .unit {
+  color: rgb(33, 33, 33);
+  font-size: 16px;
+  font-weight: 400;
+  position: relative;
+  top: -32px;
+  margin-left: 5px;
+  line-height: 1;
 }
