--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,9 +1,11 @@
 .Weather {
-  border: 1px solid #9b9b9b;
   font-family: Arial, sans-serif;
+  background-color: white;
   color: #9b9b9b;
-  padding: 16px;
-  border-radius: 4px;
+  padding: 30px;
+  border-radius: 16px;
+  box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
+  margin: 100px auto;
 }
 
 .Weather form {
